Add handlebars templates

--- a/assets/scripts/templates/layout-list.handlebars
+++ b/assets/scripts/templates/layout-list.handlebars
@@ -4,7 +4,7 @@
     <h4><small>Name: </small>{{layout.layout_name}}</h4>
     <h5><small>Template: </small>{{layout.template.name}}</h5>
     <h5><small>Sections: </small>{{layout.sections.length}}</h5>
-    <button class="btn btn-secondary" data-id="{{layout.id}}">Open</button>
+    <button class="btn btn-secondary open-layout" data-id="{{layout.id}}">Open</button>
   </section>
 
 {{/each}}
