minor adjustments to handlebars

--- a/assets/scripts/templates/resume-view.handlebars
+++ b/assets/scripts/templates/resume-view.handlebars
@@ -1,20 +1,17 @@
 <div class="resume-view" data-id="{{resume.id}}">
   <div class="row">
-    <div class="col-2 h4">Name: </div>
-    <div class="col-8 h3">{{resume.name}}</div>
+    <div class="col-2">Name: </div>
+    <div class="col-8"><strong>{{resume.name}}</strong></div>
     <div class="col-2">
-      <!-- <button class="btn btn-outline-secondary edit-resume-name" data-id="{{resume.id}}">Edit</button> -->
     </div>
   </div>
-  {{#if resume.format}}
   <div class="row">
     <div class="col-2">Format: </div>
     <div class="col-4">{{resume.format}}</div>
   </div>
-  {{/if}}
   <div class="row">
     <div class="col-2">Body: </div>
-    <div class="col-10">
+    <div class="col-10 resume-content">
       {{resume.content}}
     </div>
   </div>
