--- a/assets/scripts/templates/resume-form.handlebars
+++ b/assets/scripts/templates/resume-form.handlebars
@@ -27,6 +27,7 @@
   </div>
   <div class="form-group row">
     <div class="col-10">
+      <input type="hidden" id="resumeUser" name="resume[user_id]" value="">
       <input type="hidden" id="resumeId" name="resume[id]" value="{{resume.id}}">
     </div>
     <div class="col-2">
