--- a/assets/scripts/templates/resume-form.handlebars
+++ b/assets/scripts/templates/resume-form.handlebars
@@ -27,7 +27,7 @@
   </div>
   <div class="form-group row">
     <div class="col-10">
-      <input type="hidden" id="resumeUser" name="resume[user_id]" value="{{resume.user.id}}"
+      <input type="hidden" id="resumeUser" name="resume[user_id]" value="{{resume.user.id}}">
       <input type="hidden" id="resumeId" name="resume[id]" value="{{resume.id}}">
     </div>
     <div class="col-2">
@@ -36,11 +36,3 @@
   </div>
 </form>
 </div>
-<script type="text/javascript">
-var simpleMde
-if (typeof simpleMde == 'undefined')
-  simpleMde = new SimpleMDE({
-    toolbar: ["bold", "italic", "heading", "|", "quote"],
-    element: $('#resumeContent')[0]
-  })
-</script>
