add css for resume list

--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -43,6 +43,10 @@ main {
   min-height: 400px;
 }
 
+.resume-list section.resume {
+  margin: 3px auto;
+}
+
 nav {
   background-color: #dedede;
   border: thin solid #cdcdcd;
