--- a/assets/scripts/templates/resume-list.handlebars
+++ b/assets/scripts/templates/resume-list.handlebars
@@ -1,18 +1,20 @@
-{{#each resumes as |resume|}}
-<section class="resume row">
-  <div class="col-md-2">
-    <small>Name: </small>
-  </div>
-  <div class="col-md-4 h4">
-    {{resume.name}}
-  </div>
-  {{#if resume.format}}
-  <div class="col-md-2">
-    <small>{{resume.format}}</small>
-  </div>
-  {{/if}}
-  <div class="col-md-2">
-    <button class="btn btn-outline-primary open-resume" data-id="{{resume.id}}">Open</button>
-  </div>
-</section>
-{{/each}}
+<div class="resume-list">
+  <header class="row">
+    <div class="col-md-4">Resume Name</div>
+    <div class="col-md-2">Format</div>
+    <div class="col"></div>
+  </header>
+  {{#each resumes as |resume|}}
+  <section class="resume row" data-id="{{resume.id}}">
+    <div class="col-md-4">
+      {{resume.name}}
+    </div>
+    <div class="col-md-2">
+      <small>{{resume.format}}</small>
+    </div>
+    <div class="col">
+      <button class="btn btn-outline-primary open-resume" data-id="{{resume.id}}">Open</button>
+    </div>
+  </section>
+  {{/each}}
+</div>
