--- a/assets/scripts/templates/resume-view.handlebars
+++ b/assets/scripts/templates/resume-view.handlebars
@@ -11,17 +11,12 @@
   </div>
   <div class="row">
     <div class="col-2">Body: </div>
-    <div class="col-10 resume-content">
+    <div class="col-8 resume-content">
       {{resume.content}}
     </div>
-  </div>
-  <div class="row">
-    <div class="col-8"></div>
     <div class="col">
-      <button class="btn btn-outline-secondary edit-resume" data-id="{{resume.id}}">Edit</button>
-    </div>
-    <div class="col">
-      <button class="btn btn-outline-secondary delete-resume" data-id="{{resume.id}}">Delete</button>
+      <button class="form-control btn btn-outline-secondary edit-resume" data-id="{{resume.id}}">Edit</button>
+      <button class="form-control btn btn-outline-secondary delete-resume" data-id="{{resume.id}}">Delete</button>
     </div>
   </div>
 </div>
