--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -4,10 +4,5 @@
 
 
 .todo {
-  background-color: #000;
-  color: #0ff;
-  font-family: monospace;
-  &:before {
-    content: 'TODO: ';
-  }
+  visibility: hidden;
 }
