--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -1,7 +1,7 @@
 /* Layout */
 
 body {
-  background-color: #900;
+  background-color: #f90;
 }
 
 .container {
@@ -44,6 +44,24 @@ header {
   border: thin gray inset;
   border-radius: 2px;
 }
+#titlePanel h1 {
+  font-size: 60px;
+  font-family: Lobster, cursive;
+  font-weight: bold;
+}
+
+#userMessage {
+  font-family: Poppins, sans-serif;
+  margin-bottom: 1px;
+}
+#userMessage .alert {
+  margin-bottom: 0;
+  padding: 0.25rem 0.5rem;
+}
+
+#authenticationPanel div {
+  margin-top: 5%;
+}
 
 main {
   margin: 0 10%;
@@ -51,6 +69,13 @@ main {
 
 #displayPanel {
   min-height: 400px;
+}
+
+.resume-message {
+  text-align: center;
+  font-family: Poppins, sans-serif;
+  font-size: 18px;
+  margin-top: 10px;
 }
 
 .resume-list section.resume {
